# libSloppy

./: .gitignore  CMakeLists.txt  Doxyfile  createNewTag.sh  libSloppy.cpp  libSloppy.h  releaseNewVersion.sh  updateExtDateTimeLib.sh  updateJson.sh  updateTimezoneSpec.sh
Sloppy/: AsyncWorker.cpp  AsyncWorker.h  BasicException.h  CSV.cpp  CSV.h  CyclicWorkerThread.cpp  CyclicWorkerThread.h  GenericRange.h  ManagedFileDescriptor.cpp  ManagedFileDescriptor.h  Memory.cpp  Memory.h  NamedType.h  ResultOrError.h  String.cpp  String.h  SubProcess.cpp  SubProcess.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  ThreadStats.cpp  ThreadStats.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  libSloppy.cpp  libSloppy.h
Sloppy/ConfigFileParser/: ConfigFileParser.cpp  ConfigFileParser.h  ConstraintChecker.cpp  ConstraintChecker.h
Sloppy/Crypto/: Crypto.cpp  Crypto.h  MiniCert.cpp  MiniCert.h  Sodium.cpp  Sodium.h
Sloppy/DateTime/: DateAndTime.cpp  DateAndTime.h  Zonespec.cpp  tz.cpp
Sloppy/HTML/: BasicElements.cpp  BasicElements.h  Bootstrap.cpp  Bootstrap.h  StyledElement.cpp  StyledElement.h  Table.cpp  Table.h
Sloppy/Logger/: Logger.cpp  Logger.h
Sloppy/MailAndMIME/: Header.cpp  Header.h  MIME_Message.cpp  MIME_Message.h  MailAndMIME.cpp  MailAndMIME.h  Message.cpp  Message.h
Sloppy/Net/: CryptoClientServer.cpp  CryptoClientServer.h  ManagedSocket.cpp  ManagedSocket.h  Net.cpp  Net.h  TcpClientServer.cpp  TcpClientServer.h
Sloppy/TemplateProcessor/: Template.cpp  Template.h  TemplateCollection.cpp  TemplateCollection.h  TemplateSys.cpp  TemplateSys.h
tests/: BasicTestClass.cpp  BasicTestClass.h  tstArrayView.cpp  tstAsyncWorker.cpp  tstBetterTemplateSys.cpp  tstCSV.cpp  tstConfigParser.cpp  tstCrypto.cpp  tstCryptoClientServer.cpp  tstCyclicThread.cpp  tstDatePeriods.cpp  tstDateRanges.cpp  tstDateTime.cpp  tstEmailPattern.cpp  tstGenericPeriod.cpp  tstGenericRange.cpp  tstHTML.cpp  tstManagedArray.cpp  tstManagedFileDescriptor.cpp  tstManagedMemory.cpp  tstMemFile.cpp  tstMiniCert.cpp  tstNamedType.cpp  tstNetFunc.cpp  tstPasswordProtectedSecret.cpp  tstPosixFileFunc.cpp  tstRFC2045.cpp  tstRFC822.cpp  tstResultOrError.cpp  tstSodium.cpp  tstStringFunc.cpp  tstStrings.cpp  tstSubprocess.cpp  tstTcpClientServer.cpp  tstTemplateProcessor.cpp  tstThreadSafeQueue.cpp  tstTimePeriods.cpp  tstTimeRanges.cpp  tstTimer.cpp  tstTimestamps.cpp  (+3 more)
tests/sampleTemplateStore/: forTest.txt  ifTest.txt  multiInclude.txt  nestedFor.txt  recursion1.txt  recursion2a.txt  recursion2b.txt  stringlist.lst  stringlist.txt  subkeys.txt  t1.txt
tests/sampleTemplateStore/inc/: i1.txt
